# Tennis_Web

./:  pyproject.toml  .env.example  README.md  config.ini.example  main.py  pyproject.toml  requirements.txt
backend/: config.ini  main.py  pyproject.toml
backend/app/: celery.py  dependencies.py
backend/app/api/v1/: live_games.py  media.py  router.py
backend/app/background/: consumer.py  handlers.py
backend/app/background/tasks/: __init__.py  game_tasks.py  play_game_task.py  tournament_tasks.py
backend/app/broker/: InMemoryMessageBroker.py  memory_message_broker.py  message_broker.py  message_broker_factory.py  redis_message_broker.py
backend/app/config/: game_engine_config.py  tournament_builder.py
backend/app/core/: bootstrap.py  context.py  cors.py  lifespan.py  media_lifecyle.py  streaming_lifecycle.py  ws_auth.py
backend/app/domain/tournament/: tennis.py
backend/app/handlers/: auth_base.py  base.py  broker_relay.py  game_controls.py  join_game.py
backend/app/infra/: job_store_common.py  job_store_sync.py  keys.py  music_file_store.py  music_redis_store.py  sync_redis.py
backend/app/lib/: singleton_metaclass.py
backend/app/models/: music.py
backend/app/scheduler/: game_feeder.py  game_feeder_factory.py  game_state_key_builder.py  manager.py  scheduler.py  state_publisher.py
backend/app/services/: ingestion_service.py  live_games.py  music_service.py
backend/app/shared/enums/: broker_channels.py  client_events.py  control_types.py  game_event.py  message_types.py
backend/app/tasks/: __init__.py  play_game_task.py
backend/app/websockets/: client_manager.py
backend/app/websockets/publisher/: InMemoryMessageBroker.py  message_broker.py  redis_message_broker.py
backend/app/websockets/scheduler/: manager.py  scheduler.py
backend/app/websockets_api/: client_manager.py  socketio_server_context.py
backend/app/websockets_api/namespaces/: base_namespace.py  game_namespace.py  message_dispacter.py  message_namespace.py
backend/app/websockets_api/routes/: loader.py  registry.py  router.py  routes_list.py
backend/db/: file_storage.py  redis_storage.py
backend/db/data/: atp-calender.json  music.json
backend/db/exceptions/: redis_connection_error.py
backend/test/: conftest.py
backend/test/app/: test_live_games.py
backend/test/app/background/: test_handlers.py
backend/test/app/brokers/: test_broker_factory.py  test_memory_broker.py  (+1 more)
backend/test/db/: __init__.py  test_file_storage.py  test_file_store.py  test_redis_storage.py
backend/utils/: logger.py
(+740 files in other folders)
